--- a/assets/sass/forms/_buttons.scss
+++ b/assets/sass/forms/_buttons.scss
@@ -1,14 +1,16 @@
+@use "../mixins/mixins-master";
+
 button,
 input[type='button'],
 input[type='reset'],
 input[type='submit'] {
-	@include btn;
+	@include mixins-master.btn;
 }
 
 // Button styles
 .btn {
 	text-decoration: none;
-	@include btn;
+	@include mixins-master.btn;
 
 	&.invert-button {
 		border: 1px solid $color__white;
@@ -19,21 +21,21 @@ input[type='submit'] {
 // Button icon styles
 .posts-list .btn-icon {
 	&:before {
-		@include font-awesome-icon;
-		@include font-size(35/16);
+		@include mixins-master.font-awesome-icon;
+		@include mixins-master.font-size(35/16);
 		content: '\f178';
 	}
 }
 
 // Button text-icon styles
 .btn-text-icon {
-	@include font-size(14/16);
+	@include mixins-master.font-size(14/16);
 	text-transform: uppercase;
 	font-weight: 500;
 	&:after {
 		transform:translateY(-1px);
-		@include font-awesome-icon;
-		@include font-size(12/16);
+		@include mixins-master.font-awesome-icon;
+		@include mixins-master.font-size(12/16);
 		content: '\f061';
 		margin-left: 6px;
 	}
