--- a/assets/sass/forms/_forms.scss
+++ b/assets/sass/forms/_forms.scss
@@ -1,4 +1,4 @@
-@import "buttons";
-@import "fields";
-@import "search-form";
-@import "password-form";
+@use "buttons";
+@use "fields";
+@use "search-form";
+@use "password-form";
