--- a/assets/sass/navigation/_navigation.scss
+++ b/assets/sass/navigation/_navigation.scss
@@ -1,29 +1,29 @@
 /*--------------------------------------------------------------
 ## Links
 --------------------------------------------------------------*/
-@import "links";
+@use "links";
 
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
-@import "menus";
+@use "menus";
 
 /*--------------------------------------------------------------
 ## Mobile menu
 --------------------------------------------------------------*/
-@import "mobile-menu";
+@use "mobile-menu";
 
 /*--------------------------------------------------------------
 ## Posts navigation
 --------------------------------------------------------------*/
-@import "posts-navigation";
+@use "posts-navigation";
 
 /*--------------------------------------------------------------
 ## Social
 --------------------------------------------------------------*/
-@import "social";
+@use "social";
 
 /*--------------------------------------------------------------
 ## Breadcrumbs
 --------------------------------------------------------------*/
-@import "breadcrumbs";
+@use "breadcrumbs";
