--- a/assets/sass/plugins/_plugins.scss
+++ b/assets/sass/plugins/_plugins.scss
@@ -1,24 +1,24 @@
 /*--------------------------------------------------------------
 ## Elementor
 --------------------------------------------------------------*/
-@import "elementor";
+@use "elementor";
 
 /*--------------------------------------------------------------
 ## Jet plugins
 --------------------------------------------------------------*/
-@import "jet-plugins";
+@use "jet-plugins";
 
 /*--------------------------------------------------------------
 ## WPCF7
 --------------------------------------------------------------*/
-@import "wpcf7";
+@use "wpcf7";
 
 /*--------------------------------------------------------------
 ## WPML
 --------------------------------------------------------------*/
-@import "wpml";
+@use "wpml";
 
 /*--------------------------------------------------------------
 ## Ecwid
 --------------------------------------------------------------*/
-@import "ecwid";
+@use "ecwid";
