--- a/assets/sass/plugins/_wpcf7.scss
+++ b/assets/sass/plugins/_wpcf7.scss
@@ -1,13 +1,15 @@
+jet-plugins.@use "jet-plugins";
+
 $loader-width: 20px;
-$loader-border-width: 3px;
+jet-plugins.$loader-border-width: 3px;
 
 div.wpcf7 {
 	.ajax-loader {
 		position: relative;
 		border-radius: 50%;
-		width: $loader-width;
-		height: $loader-width;
-		border: $loader-border-width solid transparent;
+		width: jet-plugins.$loader-width;
+		height: jet-plugins.$loader-width;
+		border: jet-plugins.$loader-border-width solid transparent;
 		margin: 0 15px;
 		background: none;
 		animation: tm_spin 1s linear infinite;
