--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -23,14 +23,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-@import "normalize";
+@use "normalize";
 
 /*--------------------------------------------------------------
 # Base Elements
 --------------------------------------------------------------*/
-@import "elements/base";
+@use "elements/base";
 
 /*--------------------------------------------------------------
 # Grid
 --------------------------------------------------------------*/
-@import "grid/grid";
+@use "grid/grid";
