--- a/inc/modules/blog-layouts/assets/scss/blog-layouts/_masonry.scss
+++ b/inc/modules/blog-layouts/assets/scss/blog-layouts/_masonry.scss
@@ -1,10 +1,18 @@
+@use "../../../../../../assets/sass/grid/breakpoints";
+@use "../../../../../../assets/sass/grid/variables";
+@use "../../../../../../assets/sass/mixins/border-radius";
+@use "../../../../../../assets/sass/mixins/mixins-master";
+@use "../../../../../../assets/sass/variables-site/colors";
+@use "../../../../../../assets/sass/variables-site/structure";
+@use "grid";
+
 /*--------------------------------------------------------------
 ### Masonry Posts List
 --------------------------------------------------------------*/
 @mixin transition($transition...) {
 	transition: $transition;
 }
-$color__nothumb: $color__lightblue;
+grid.$color__nothumb: colors.$color__lightblue;
 
 .posts-list.posts-list--masonry {
 	/*-----------------------
@@ -24,19 +32,19 @@ $color__nothumb: $color__lightblue;
 	}
 	&.list-style-v4,
 	&.list-style-v9 {
-		column-gap: $grid-gutter-width;
+		column-gap: variables.$grid-gutter-width;
 		column-count: 1;
 		column-fill: auto;
 		-moz-column-fill: balance;
-		@include media-breakpoint-up(sm) {
+		@include breakpoints.media-breakpoint-up(sm) {
 			column-count: 2;
 			-moz-column-count: 2;
 		}
-		@include media-breakpoint-up(md) {
+		@include breakpoints.media-breakpoint-up(md) {
 			column-count: 3;
 			-moz-column-count: 3;
 		}
-		@include media-breakpoint-up(lg) {
+		@include breakpoints.media-breakpoint-up(lg) {
 			column-count: 4;
 			-moz-column-count: 4;
 		}
@@ -46,12 +54,12 @@ $color__nothumb: $color__lightblue;
 	&.list-style-default, 
 	&.list-style-V3, 
 	&.list-style-v2 {
-		column-gap: $grid-gutter-width;
+		column-gap: variables.$grid-gutter-width;
 		column-count: 1;
-		@include media-breakpoint-up(sm) {
+		@include breakpoints.media-breakpoint-up(sm) {
 			column-count: 2;
 		}
-		@include media-breakpoint-up(md) {
+		@include breakpoints.media-breakpoint-up(md) {
 			column-count: 3;
 		}
 	}
@@ -62,9 +70,9 @@ $color__nothumb: $color__lightblue;
 	&.list-style-v7, 
 	&.list-style-v8,
 	&.list-style-v10 {
-		column-gap: $grid-gutter-width;
+		column-gap: variables.$grid-gutter-width;
 		column-count: 1;
-		@include media-breakpoint-up(md) {
+		@include breakpoints.media-breakpoint-up(md) {
 			column-count: 2;
 		}
 	}
@@ -73,16 +81,16 @@ $color__nothumb: $color__lightblue;
 	.masonry-item {
 		.comments-link {
 			padding: 10px 12px 9px;
-			@include border-radius();
-			@include font-size(11/16);
-			background-color: $color__light;
+			@include border-radius.border-radius();
+			@include mixins-master.font-size(11/16);
+			background-color: colors.$color__light;
 			.list-style-v3 & {
 				background-color: transparent;
 				border: 1px solid;
 			}
 			&:before {
-				@include font-awesome-icon;
-				@include font-size(14/16);
+				@include mixins-master.font-awesome-icon;
+				@include mixins-master.font-size(14/16);
 				content: '\f075';
 				margin-right: 4px;
 			}
@@ -103,7 +111,7 @@ $color__nothumb: $color__lightblue;
 				margin: 0 0 10px;
 			}
 			&-meta {
-				@include font-size(14/16);
+				@include mixins-master.font-size(14/16);
 			}
 			&-content {
 				margin-bottom: 5px;
@@ -134,27 +142,27 @@ $color__nothumb: $color__lightblue;
 	---------------------*/
 	&.list-style-v2, &.list-style-v6 {
 		.posts-list__item.masonry-item {
-			margin-bottom: $grid-gutter-width;
+			margin-bottom: variables.$grid-gutter-width;
 			.post-thumbnail {
 				&__link {
 					display: block;
 				}
 				img {
 					width: 100%;
-					border-radius: ( $button__border-radius $button__border-radius 0 0);
+					border-radius: ( structure.$button__border-radius structure.$button__border-radius 0 0);
 				}
 				margin-bottom: 0;
 			}
 			&:not(.has-post-thumbnail) .masonry-item-wrap {
-				border-top: 1px solid $color__background-hr;
-				border-radius: $border__radius $border__radius;
+				border-top: 1px solid colors.$color__background-hr;
+				border-radius: structure.$border__radius structure.$border__radius;
 			}
 			.masonry-item-wrap {
-				border: 1px solid $color__background-hr;
+				border: 1px solid colors.$color__background-hr;
 				border-top: none;
-				border-radius: ( 0 0 $border__radius $border__radius);
+				border-radius: ( 0 0 structure.$border__radius structure.$border__radius);
 				padding: 25px;
-				@include media-breakpoint-up(lg) {
+				@include breakpoints.media-breakpoint-up(lg) {
 					padding: 36px 38px 38px;
 				}
 			}
@@ -165,39 +173,39 @@ $color__nothumb: $color__lightblue;
 	---------------------*/
 	&.list-style-v3 {
 		.posts-list__item.masonry-item {
-			margin-bottom: $grid-gutter-width;
+			margin-bottom: variables.$grid-gutter-width;
 		}
 	}
 	/*-------------------
 	### V4 Styles
 	---------------------*/
 	&.list-style-v4, &.list-style-v5 {
-		margin-left: $grid-gutter-width;
-		margin-right: $grid-gutter-width;
+		margin-left: variables.$grid-gutter-width;
+		margin-right: variables.$grid-gutter-width;
 		.posts-list__item.masonry-item {
-			margin-bottom: $grid-gutter-width;
+			margin-bottom: variables.$grid-gutter-width;
 			.post-thumbnail {
 				&__link {
 					display: block;
 				}
 				img {
 					width: 100%;
-					border-radius: ( $button__border-radius $button__border-radius 0 0);
+					border-radius: ( structure.$button__border-radius structure.$button__border-radius 0 0);
 				}
 				margin-bottom: 0;
 			}
 			&:not(.has-post-thumbnail) .masonry-item-wrap {
-				border-radius: $border__radius $border__radius;
+				border-radius: structure.$border__radius structure.$border__radius;
 			}
 			.masonry-item-wrap {
-				border-radius: ( 0 0 $border__radius $border__radius);
+				border-radius: ( 0 0 structure.$border__radius structure.$border__radius);
 				padding: 25px;
-				background-color: $color__lightblue;
-				@include media-breakpoint-up(lg) {
+				background-color: colors.$color__lightblue;
+				@include breakpoints.media-breakpoint-up(lg) {
 					padding: 36px 38px 38px;
 				}
 				.comments-link {
-					background-color: $color__white;
+					background-color: colors.$color__white;
 				}
 			}
 		}
@@ -211,7 +219,7 @@ $color__nothumb: $color__lightblue;
 	---------------------*/
 	&.list-style-v8, &.list-style-v7, &.list-style-v9 {
 		.posts-list__item.masonry-item {
-			margin-bottom: $grid-gutter-width;
+			margin-bottom: variables.$grid-gutter-width;
 			.post-thumbnail {
 				margin-right: 0;
 				margin-bottom: 0;
@@ -220,8 +228,8 @@ $color__nothumb: $color__lightblue;
 				}
 			}
 			.masonry-item-wrap {
-				border: 1px solid $color__background-hr;
-				border-radius: $border__radius;
+				border: 1px solid colors.$color__background-hr;
+				border-radius: structure.$border__radius;
 				padding: 25px;
 				display: flex;
 				flex-direction: column;
@@ -243,11 +251,11 @@ $color__nothumb: $color__lightblue;
 					margin-top: 20px;
 					text-align: center;
 				}
-				@include media-breakpoint-up(lg) {
+				@include breakpoints.media-breakpoint-up(lg) {
 					padding: 36px 38px 38px;
 				}
 				.space-between-content {
-					@include media-breakpoint-down(lg) {
+					@include breakpoints.media-breakpoint-down(lg) {
 						flex-direction: column;
 						flex-wrap: wrap;
 						align-content: stretch;
@@ -262,11 +270,11 @@ $color__nothumb: $color__lightblue;
 		}
 	}
 	&.list-style-v9 {
-		margin-left: $grid-gutter-width;
-		margin-right: $grid-gutter-width;
-		@include media-breakpoint-down(sm) {
-			margin-left: $grid-gutter-width/2;
-			margin-right: $grid-gutter-width/2;
+		margin-left: variables.$grid-gutter-width;
+		margin-right: variables.$grid-gutter-width;
+		@include breakpoints.media-breakpoint-down(sm) {
+			margin-left: variables.$grid-gutter-width/2;
+			margin-right: variables.$grid-gutter-width/2;
 		}
 	}
 	/*-------------------
@@ -285,13 +293,13 @@ $color__nothumb: $color__lightblue;
 			&-inner {
 				position: relative;
 				margin: -30px 20px 0 20px;
-				background-color: $color__white;
+				background-color: colors.$color__white;
 				padding: 20px;
-				@include media-breakpoint-up(sm) {
+				@include breakpoints.media-breakpoint-up(sm) {
 					margin: -40px 0 0 40px;
 					padding: 25px 25px 25px 30px;
 				}
-				@include media-breakpoint-up(lg) {
+				@include breakpoints.media-breakpoint-up(lg) {
 					margin: -49px 0 0 62px;
 					padding: 35px 25px 25px 38px;
 				}
