--- a/inc/modules/woo/assets/scss/category/_category.scss
+++ b/inc/modules/woo/assets/scss/category/_category.scss
@@ -1,14 +1,16 @@
+@use "../mixins/variables";
+
 /**
  * Category main styles
  */
 .products{
 	.product-category{
-		margin: $wc-category-offset;
+		margin: variables.$wc-category-offset;
 		
 		.category-content{
-			padding: $wc-category-inset;
-			border: $wc-category-border;
-			border-radius: $wc-category-border-radius;
+			padding: variables.$wc-category-inset;
+			border: variables.$wc-category-border;
+			border-radius: variables.$wc-category-border-radius;
 		}
 		
 	}
@@ -16,9 +18,9 @@
 
 .woocommerce-loop-category__title{
 	text-align: left;
-	font-size: $wc-category-title-fz;
-	line-height: $wc-category-title-lh;
-	margin: $wc-category-title-offset;
+	font-size: variables.$wc-category-title-fz;
+	line-height: variables.$wc-category-title-lh;
+	margin: variables.$wc-category-title-offset;
 
 	// reset default styles for tag mark
 	.count{
