--- a/inc/modules/woo/assets/scss/components/_tables.scss
+++ b/inc/modules/woo/assets/scss/components/_tables.scss
@@ -1,13 +1,15 @@
+@use "../mixins/variables";
+
 /**
  * Tables
  */
 .woocommerce table {
-	border-radius: $wc-table-border;
+	border-radius: variables.$wc-table-border;
 
 		th, td {
-			font-size: $wc-table-fz;
-			line-height: $wc-table-lh;
-			padding: $wc-table-inset;
+			font-size: variables.$wc-table-fz;
+			line-height: variables.$wc-table-lh;
+			padding: variables.$wc-table-inset;
 
 			p {
 				margin-bottom: 0;
@@ -15,19 +17,19 @@
 		}
 
 	//  thead style
-	@if ($wc-table-fz != $wc-thead-table-fz) or ($wc-table-lh != $wc-thead-table-lh) {
+	@if (variables.$wc-table-fz != variables.$wc-thead-table-fz) or (variables.$wc-table-lh != variables.$wc-thead-table-lh) {
 		thead {
 			tr th {
-				font-size: $wc-thead-table-fz;
-				line-height: $wc-thead-table-lh;
+				font-size: variables.$wc-thead-table-fz;
+				line-height: variables.$wc-thead-table-lh;
 			}
 		}
 	}
 
 	// inner border
-	@if ($wc-table-with-inner-border) {
+	@if (variables.$wc-table-with-inner-border) {
 		tr {
-			border-bottom: 1px solid $wc-table-border-color;
+			border-bottom: 1px solid variables.$wc-table-border-color;
 
 			&:last-child {
 				border-bottom: none;
@@ -35,7 +37,7 @@
 		}
 
 		tr td {
-			border-left: 1px solid $wc-table-border-color;
+			border-left: 1px solid variables.$wc-table-border-color;
 
 			&:first-child {
 				border-left: none;
@@ -44,9 +46,9 @@
 	}
 
 	// inner bottom border
-	@if ($wc-table-with-inner-bottom-border) {
+	@if (variables.$wc-table-with-inner-bottom-border) {
 		tr, thead {
-			border-bottom: 1px solid $wc-table-border-color;
+			border-bottom: 1px solid variables.$wc-table-border-color;
 
 			&:last-child {
 				border-bottom: none;
@@ -55,12 +57,12 @@
 	}
 
 	// inner thead border
-	@if ($wc-table-with-inner-thead-border) {
+	@if (variables.$wc-table-with-inner-thead-border) {
 		thead {
-			border-bottom: 1px solid $wc-table-border-color;;
+			border-bottom: 1px solid variables.$wc-table-border-color;;
 		}
 		tr th {
-			border-left: 1px solid $wc-table-border-color;
+			border-left: 1px solid variables.$wc-table-border-color;
 
 			&:first-child {
 				border-left: none;
@@ -69,8 +71,8 @@
 	}
 
 	// outer border
-	@if ($wc-table-with-outer-border) {
-		border: 1px solid $wc-table-border-color;
+	@if (variables.$wc-table-with-outer-border) {
+		border: 1px solid variables.$wc-table-border-color;
 	}
 
 }
