--- a/inc/modules/woo/assets/scss/mixins/_mixins.scss
+++ b/inc/modules/woo/assets/scss/mixins/_mixins.scss
@@ -1,3 +1,6 @@
+@use "../../../../../../assets/sass/grid/breakpoints";
+@use "../../../../../../assets/sass/grid/variables";
+
 // Clearfix
 @mixin clearfix() {
 	content: "";
@@ -5,7 +8,7 @@
 	table-layout: fixed;
 }
 
-@mixin make-row($gutter: $grid-gutter-width) {
+@mixin make-row($gutter: variables.$grid-gutter-width) {
 	display: flex;
 	flex-wrap: wrap;
 	margin-left:  ($gutter / -2);
@@ -33,12 +36,12 @@
 	// later on to override this initial width.
 	width: 100%;
 	min-height: 1px; // Prevent collapsing
-	padding-right: ($grid-gutter-width / 2);
-	padding-left: ($grid-gutter-width / 2);
+	padding-right: (variables.$grid-gutter-width / 2);
+	padding-left: (variables.$grid-gutter-width / 2);
 }
 
-@function breakpoint-infix($name, $breakpoints: $grid-breakpoints) {
-	@return if(breakpoint-min($name, $breakpoints) == null, "", "#{$name}");
+@function breakpoint-infix($name, $breakpoints: variables.$grid-breakpoints) {
+	@return if(breakpoints.breakpoint-min($name, $breakpoints) == null, "", "#{$name}");
 }
 
 
