--- a/assets/sass/elements/_elements.scss
+++ b/assets/sass/elements/_elements.scss
@@ -1,3 +1,7 @@
+@use "sass:meta";
+@use "../grid/breakpoints";
+@use "../mixins/mixins-master";
+
 img {
 	height: auto;
 	/* Make sure images are scaled correctly. */
@@ -18,15 +22,15 @@ blockquote {
 	position: relative;
 	margin: 35px 0;
 	padding: 0 0 0 60px;
-	@include font-size(18/16);
+	@include mixins-master.font-size(18/16);
 	font-weight: 400;
 	line-height: 1.45;
 	font-style: italic;
-	@include media-breakpoint-up(sm) {
-		@include font-size(22/16);
+	@include breakpoints.media-breakpoint-up(sm) {
+		@include mixins-master.font-size(22/16);
 	}
-	@include media-breakpoint-up(md) {
-		@include font-size(28/16);
+	@include breakpoints.media-breakpoint-up(md) {
+		@include mixins-master.font-size(28/16);
 	}
 	p {
 		margin: 0;
@@ -44,7 +48,7 @@ blockquote {
 	}
 	&:before {
 		content: "\f10d";
-		@include font-awesome-icon;
+		@include mixins-master.font-awesome-icon;
 		position: absolute;
 		font-size: 30px;
 		top: 0;
@@ -68,14 +72,14 @@ hr {
 ## Lists
 --------------------------------------------------------------*/
 
-@import "lists";
+@include meta.load-css("lists");
 /*--------------------------------------------------------------
 ## ToTop
 --------------------------------------------------------------*/
 
-@import "totop-button";
+@include meta.load-css("totop-button");
 /*--------------------------------------------------------------
 ## Page preloader
 --------------------------------------------------------------*/
 
-@import "page-preloader";
+@include meta.load-css("page-preloader");
