--- a/assets/sass/forms/_fields.scss
+++ b/assets/sass/forms/_fields.scss
@@ -1,3 +1,5 @@
+@use "../mixins/mixins-master";
+
 input[type='text'],
 input[type='email'],
 input[type='url'],
@@ -37,7 +39,7 @@ input[type='reset'] {
 
 input[type='submit'],
 input[type='reset'] {
-	@include font-size(11/16);
+	@include mixins-master.font-size(11/16);
 	font-weight: 600;
 }
 
@@ -47,7 +49,7 @@ select {
 
 textarea {
 	min-height: 150px;
-	@include resizable(vertical);
+	@include mixins-master.resizable(vertical);
 }
 
 ::-moz-placeholder { opacity: 1; }
