--- a/assets/sass/forms/_search-form.scss
+++ b/assets/sass/forms/_search-form.scss
@@ -1,3 +1,5 @@
+@use "../mixins/mixins-master";
+
 .search-form {
 	display: flex;
 	align-items: center;
@@ -10,6 +12,6 @@
 	&__submit.btn {
 		padding: 11px;
 		margin-left: 10px;
-		@include font-size(13/16);
+		@include mixins-master.font-size(13/16);
 	}
 }
