--- a/assets/sass/grid/_mixins.scss
+++ b/assets/sass/grid/_mixins.scss
@@ -1,5 +1,10 @@
+@use "sass:map";
+@use "sass:math";
+@use "breakpoints";
+@use "variables";
+
 // Grid system
-@mixin make-container($gutter: $grid-gutter-width) {
+@mixin make-container($gutter: variables.$grid-gutter-width) {
 	margin-left: auto;
 	margin-right: auto;
 	padding-left:  ($gutter / 2);
@@ -7,48 +12,48 @@
 }
 
 // For each breakpoint, define the maximum width of the container in a media query
-@mixin make-container-max-widths($max-widths: $container-max-widths) {
+@mixin make-container-max-widths($max-widths: variables.$container-max-widths) {
 	@each $breakpoint, $container-max-width in $max-widths {
-		@include media-breakpoint-up($breakpoint) {
+		@include breakpoints.media-breakpoint-up($breakpoint) {
 			max-width: $container-max-width;
 		}
 	}
 }
 
-@mixin make-row($gutter: $grid-gutter-width) {
+@mixin make-row($gutter: variables.$grid-gutter-width) {
 	display: flex;
 	flex-wrap: wrap;
 	margin-left:  ($gutter / -2);
 	margin-right: ($gutter / -2);
 }
 
-@mixin make-col($gutter: $grid-gutter-width) {
+@mixin make-col($gutter: variables.$grid-gutter-width) {
 	position: relative;
 	min-height: 1px;
 	padding-left:  ($gutter / 2);
 	padding-right: ($gutter / 2);
 }
 
-@mixin make-col-span($size, $columns: $grid-columns) {
-	flex: 0 0 percentage($size / $columns);
-	max-width: percentage($size / $columns);
+@mixin make-col-span($size, $columns: variables.$grid-columns) {
+	flex: 0 0 math.percentage($size / $columns);
+	max-width: math.percentage($size / $columns);
 }
 
-@mixin make-col-offset($size, $columns: $grid-columns) {
-	@if $need-offset {
-		margin-left: percentage($size / $columns);
+@mixin make-col-offset($size, $columns: variables.$grid-columns) {
+	@if variables.$need-offset {
+		margin-left: math.percentage($size / $columns);
 	}
 }
 
-@mixin make-col-push($size, $columns: $grid-columns) {
-	@if $need-push {
-		left: if($size > 0, percentage($size / $columns), auto);
+@mixin make-col-push($size, $columns: variables.$grid-columns) {
+	@if variables.$need-push {
+		left: if($size > 0, math.percentage($size / $columns), auto);
 	}
 }
 
-@mixin make-col-pull($size, $columns: $grid-columns) {
-	@if $need-pull {
-		right: if($size > 0, percentage($size / $columns), auto);
+@mixin make-col-pull($size, $columns: variables.$grid-columns) {
+	@if variables.$need-pull {
+		right: if($size > 0, math.percentage($size / $columns), auto);
 	}
 }
 
@@ -63,7 +68,7 @@
 	}
 }
 
-@mixin make-grid-columns($columns: $grid-columns, $gutter: $grid-gutter-width, $breakpoints: $grid-breakpoints) {
+@mixin make-grid-columns($columns: variables.$grid-columns, $gutter: variables.$grid-gutter-width, $breakpoints: variables.$grid-breakpoints) {
 	// Common properties for all breakpoints
 	%grid-column {
 		position: relative;
@@ -73,14 +78,14 @@
 		padding-left: ($gutter / 2);
 		padding-right: ($gutter / 2);
 	}
-	@each $breakpoint in map-keys($breakpoints) {
+	@each $breakpoint in map.keys($breakpoints) {
 		@for $i from 1 through $columns {
 			.col-#{$breakpoint}-#{$i} {
 				@extend %grid-column;
 			}
 		}
 
-		@include media-breakpoint-up($breakpoint) {
+		@include breakpoints.media-breakpoint-up($breakpoint) {
 
 			@for $i from 1 through $columns {
 				.col-#{$breakpoint}-#{$i} {
