--- a/assets/sass/media/_galleries.scss
+++ b/assets/sass/media/_galleries.scss
@@ -1,8 +1,11 @@
+@use "../grid/variables";
+@use "../mixins/mixins-master";
+
 .gallery {
-	@include grid-indent($grid-gutter-width/2);
+	@include mixins-master.grid-indent(variables.$grid-gutter-width/2);
 	&-item {
-		margin-top: $grid-gutter-width/2;
-		margin-bottom: $grid-gutter-width/2;
+		margin-top: variables.$grid-gutter-width/2;
+		margin-bottom: variables.$grid-gutter-width/2;
 	}
 	img {
 		display: block;
