--- a/assets/sass/mixins/_border-radius.scss
+++ b/assets/sass/mixins/_border-radius.scss
@@ -1,34 +1,36 @@
+@use "../variables-site/structure";
+
 // Single side border-radius
 
-@mixin border-radius($radius: $border__radius) {
-	@if $enable-rounded {
+@mixin border-radius($radius: structure.$border__radius) {
+	@if structure.$enable-rounded {
 		border-radius: $radius;
 	}
 }
 
 @mixin border-top-radius($radius) {
-	@if $enable-rounded {
+	@if structure.$enable-rounded {
 		border-top-left-radius: $radius;
 		border-top-right-radius: $radius;
 	}
 }
 
 @mixin border-right-radius($radius) {
-	@if $enable-rounded {
+	@if structure.$enable-rounded {
 		border-top-right-radius: $radius;
 		border-bottom-right-radius: $radius;
 	}
 }
 
 @mixin border-bottom-radius($radius) {
-	@if $enable-rounded {
+	@if structure.$enable-rounded {
 		border-bottom-right-radius: $radius;
 		border-bottom-left-radius: $radius;
 	}
 }
 
 @mixin border-left-radius($radius) {
-	@if $enable-rounded {
+	@if structure.$enable-rounded {
 		border-top-left-radius: $radius;
 		border-bottom-left-radius: $radius;
 	}
