--- a/assets/sass/modules/_alignments.scss
+++ b/assets/sass/modules/_alignments.scss
@@ -1,3 +1,5 @@
+@use "../mixins/mixins-master";
+
 .alignleft {
 	float: left;
 	margin-right: 30px;
@@ -12,6 +14,6 @@
 
 .aligncenter {
 	clear: both;
-	@include center-block;
+	@include mixins-master.center-block;
 	margin-bottom: 15px;
 }
