--- a/assets/sass/modules/_comments.scss
+++ b/assets/sass/modules/_comments.scss
@@ -1,3 +1,6 @@
+@use "../grid/breakpoints";
+@use "../mixins/mixins-master";
+
 .comments {
 	&-area {
 		position: relative;
@@ -19,7 +22,7 @@
 			margin-top: 18px;
 			margin-left: 30px;
 			list-style: none;
-			@include media-breakpoint-up(lg) {
+			@include breakpoints.media-breakpoint-up(lg) {
 				margin-left: 70px;
 			}
 		}
@@ -119,7 +122,7 @@
 					position: relative;
 					top: -1px;
 					display: inline-block;
-					@include font-awesome-icon;
+					@include mixins-master.font-awesome-icon;
 					width: 20px;
 					height: 20px;
 					line-height: 18px;
