--- a/assets/sass/navigation/_breadcrumbs.scss
+++ b/assets/sass/navigation/_breadcrumbs.scss
@@ -1,3 +1,5 @@
+@use "../mixins/mixins-master";
+
 .breadcrumbs {
 	position: relative;
 	padding-top: 17px;
@@ -6,7 +8,7 @@
 	.page-title {
 		text-align: left;
 		margin-top: 5px;
-		@include font-size(18/16);
+		@include mixins-master.font-size(18/16);
 	}
 	&_wrap {
 		overflow: hidden;
