--- a/assets/sass/navigation/_posts-navigation.scss
+++ b/assets/sass/navigation/_posts-navigation.scss
@@ -1,3 +1,7 @@
+@use "../grid/breakpoints";
+@use "../grid/variables";
+@use "../mixins/mixins-master";
+
 .comment-navigation,
 .posts-list-navigation {
 	overflow: hidden;
@@ -51,7 +55,7 @@
 		width: 33px;
 		height: 33px;
 		text-align: center;
-		@include font-size(14/16);
+		@include mixins-master.font-size(14/16);
 		line-height: 33px;
 		border: 1px solid $color__background-hr;
 		margin: 5px 5px 5px 0;
@@ -112,8 +116,8 @@
 			max-width: 1200px;
 			margin-left: auto;
 			margin-right: auto;
-			padding-left: $grid-gutter-width/2;
-			padding-right: $grid-gutter-width/2;
+			padding-left: variables.$grid-gutter-width/2;
+			padding-right: variables.$grid-gutter-width/2;
 		}
 	}
 }
@@ -129,34 +133,34 @@
 			font-weight: 400;
 			.post-title {
 				margin: 0;
-				@include media-breakpoint-down(xs) {
-					@include font-size(16/16);
+				@include breakpoints.media-breakpoint-down(xs) {
+					@include mixins-master.font-size(16/16);
 				}
 			}
 			i {
 				position: absolute;
 				top: 32px;
-				@include media-breakpoint-up(sm) {
+				@include breakpoints.media-breakpoint-up(sm) {
 					top: 35px;
 				}
 			}
 		}
 		&-text {
 			margin-bottom: 10px;
-			@include font-size(11/16);
+			@include mixins-master.font-size(11/16);
 			font-weight: 600;
 			text-transform: uppercase;
 		}
 		&-previous,
 		&-next {
 			position: relative;
-			@include media-breakpoint-up(sm) {
+			@include breakpoints.media-breakpoint-up(sm) {
 				width: 50%;
 			}
 		}
 		&-previous {
 			padding: 0 15px 0 35px;
-			@include media-breakpoint-up(sm) {
+			@include breakpoints.media-breakpoint-up(sm) {
 				float: left;
 			}
 			i {
@@ -166,7 +170,7 @@
 		&-next {
 			text-align: right;
 			padding: 0 35px 0 15px;
-			@include media-breakpoint-up(sm) {
+			@include breakpoints.media-breakpoint-up(sm) {
 				float: right;
 			}
 			i {
@@ -175,7 +179,7 @@
 		}
 	}
 	.nav-previous + .nav-next {
-		@include media-breakpoint-down(xs) {
+		@include breakpoints.media-breakpoint-down(xs) {
 			margin-top: 30px;
 		}
 	}
