--- a/assets/sass/site/primary/_footer.scss
+++ b/assets/sass/site/primary/_footer.scss
@@ -1,6 +1,10 @@
+@use "../../grid/breakpoints";
+@use "../../grid/mixins";
+@use "../../mixins/mixins-master";
+
 .site-footer {
 	&__wrap {
-		@include font-size(11/16);
+		@include mixins-master.font-size(11/16);
 		line-height: 20px;
 		.space-between-content {
 			&:not(:empty) {
@@ -8,7 +12,7 @@
 				padding-bottom: 30px;
 			}
 			align-items: center;
-			@include media-breakpoint-down(xs) {
+			@include breakpoints.media-breakpoint-down(xs) {
 				display: block;
 				text-align: center;
 			}
@@ -17,8 +21,8 @@
 }
 
 .footer-area {
-	@include make-container();
-	@include make-container-max-widths();
+	@include mixins.make-container();
+	@include mixins.make-container-max-widths();
 	display: flex;
 	flex-wrap: wrap;
 	>.widget {
