--- a/assets/sass/site/primary/_header.scss
+++ b/assets/sass/site/primary/_header.scss
@@ -1,8 +1,10 @@
+@use "../../grid/breakpoints";
+
 .site-header {
 	&__wrap {
 		padding-top: 15px;
 		padding-bottom: 15px;
-		@include media-breakpoint-up(md) {
+		@include breakpoints.media-breakpoint-up(md) {
 			&.isStick {
 				position: fixed;
 				z-index: 1000;
@@ -24,7 +26,7 @@
 
 .pseudoStickyBlock {
 	display: none;
-	@include media-breakpoint-up(md) {
+	@include breakpoints.media-breakpoint-up(md) {
 		display: block;
 	}
 }
