--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -1,3 +1,6 @@
+@use "../../grid/breakpoints";
+@use "../../mixins/mixins-master";
+
 /*--------------------------------------------------------------
 ### Entry
 --------------------------------------------------------------*/
@@ -13,9 +16,9 @@
 		}
 	}
 	&-meta {
-		@include font-size(14/16);
+		@include mixins-master.font-size(14/16);
 		.entry-header & {
-			@include grid-indent(8px);
+			@include mixins-master.grid-indent(8px);
 			.posts-list--default & {
 				margin-bottom: 28px;
 			}
@@ -62,7 +65,7 @@ span.tags-links {
 	white-space: nowrap;
 	vertical-align: top;
 	i {
-		@include font-size(14/16);
+		@include mixins-master.font-size(14/16);
 		margin-right: 2px;
 	}
 }
@@ -70,13 +73,13 @@ span.tags-links {
 .comments-button {
 	@include border-radius();
 	padding: 10px 12px;
-	@include font-size(11/16);
+	@include mixins-master.font-size(11/16);
 	line-height: 1.2;
 	background-color: $color__light;
 }
 
 .post-categories {
-	@include reset-list;
+	@include mixins-master.reset-list;
 	display: inline-block;
 	.btn-style & {
 		li {
@@ -121,8 +124,8 @@ span.tags-links {
 	}
 	.entry {
 		&-content {
-			@include media-breakpoint-up(sm) {
-				@include font-size(18/16);
+			@include breakpoints.media-breakpoint-up(sm) {
+				@include mixins-master.font-size(18/16);
 			}
 		}
 		&-footer {
@@ -131,7 +134,7 @@ span.tags-links {
 					margin-top: 28px;
 				}
 				>div {
-					@include space-between-content;
+					@include mixins-master.space-between-content;
 				}
 			}
 		}
@@ -187,7 +190,7 @@ span.tags-links {
 			}
 		}
 		.entry-content {
-			@include font-size(14/16);
+			@include mixins-master.font-size(14/16);
 		}
 	}
 }
