--- a/inc/modules/woo/assets/scss/components/_messages.scss
+++ b/inc/modules/woo/assets/scss/components/_messages.scss
@@ -1,3 +1,5 @@
+@use "../mixins/variables";
+
 /**
  * Messages
  */
@@ -7,8 +9,8 @@
 	position: relative;
 	list-style: none;
 	margin: 0 0 50px 0;
-	border: 1px solid $wc-border-color;
-	border-radius: $wc-border-radius;
+	border: 1px solid variables.$wc-border-color;
+	border-radius: variables.$wc-border-radius;
 	width: 100%;
 	padding: 20px 30px 20px 90px;
 	overflow: hidden;
@@ -31,8 +33,8 @@
 		line-height: 1;
 		margin: 0 20px 0 0;
 		text-align: center;
-		border-top-left-radius: $wc-border-radius;
-		border-bottom-left-radius: $wc-border-radius;
+		border-top-left-radius: variables.$wc-border-radius;
+		border-bottom-left-radius: variables.$wc-border-radius;
 		@extend %icon-font-default;
 	}
 	
@@ -53,24 +55,24 @@
 
 .woocommerce-message{
 	&:before{
-		content: $wc-messages-icon-default;
-		color: $wc-messages-icon-default-color;
-		background-color: $wc-messages-icon-default-bg;
+		content: variables.$wc-messages-icon-default;
+		color: variables.$wc-messages-icon-default-color;
+		background-color: variables.$wc-messages-icon-default-bg;
 	}
 }
 
 .woocommerce-error{
 	&:before{
-		content: $wc-messages-icon-error;
-		color: $wc-messages-icon-error-color;
-		background-color: $wc-messages-icon-error-bg;
+		content: variables.$wc-messages-icon-error;
+		color: variables.$wc-messages-icon-error-color;
+		background-color: variables.$wc-messages-icon-error-bg;
 	}
 }
 
 .woocommerce-info{
 	&:before{
-		content: $wc-messages-icon-info;
-		color: $wc-messages-icon-info-color;
-		background-color: $wc-messages-icon-info-bg;
+		content: variables.$wc-messages-icon-info;
+		color: variables.$wc-messages-icon-info-color;
+		background-color: variables.$wc-messages-icon-info-bg;
 	}
 }
