--- a/inc/modules/woo/assets/scss/components/_meta.scss
+++ b/inc/modules/woo/assets/scss/components/_meta.scss
@@ -1,8 +1,10 @@
+@use "../mixins/variables";
+
 /**
  * Product meta
  */
 .product_meta {
-	font-size: $wc-product-meta-fz;
+	font-size: variables.$wc-product-meta-fz;
 	margin: 30px 0 10px 0;
 
 	> span {
