--- a/inc/modules/woo/assets/scss/components/_title.scss
+++ b/inc/modules/woo/assets/scss/components/_title.scss
@@ -1,74 +1,76 @@
+@use "../mixins/variables";
+
 /**
  * Titles
  */
 
 // Main(grid) product
 .woocommerce-loop-product__title {
-	font-size: $wc-product-title-default-fz;
-	line-height: $wc-product-title-default-lh;
-	text-align: $wc-product-title-default-ta;
-	margin: $wc-product-title-default-offset;
-	text-transform: $wc-product-title-default-tt;
+	font-size: variables.$wc-product-title-default-fz;
+	line-height: variables.$wc-product-title-default-lh;
+	text-align: variables.$wc-product-title-default-ta;
+	margin: variables.$wc-product-title-default-offset;
+	text-transform: variables.$wc-product-title-default-tt;
 }
 
 // Single product
 .single-product .product_title {
-	font-size: $wc-single-product-title-fz;
-	line-height: $wc-single-product-title-lh;
-	text-align: $wc-single-product-title-ta;
-	margin: $wc-single-product-title-offset;
-	text-transform: $wc-single-product-title-tt;
+	font-size: variables.$wc-single-product-title-fz;
+	line-height: variables.$wc-single-product-title-lh;
+	text-align: variables.$wc-single-product-title-ta;
+	margin: variables.$wc-single-product-title-offset;
+	text-transform: variables.$wc-single-product-title-tt;
 }
 
 .product-list .woocommerce-loop-product__title {
-	font-size: $wc-product-list-title-fz;
-	line-height: $wc-product-list-title-lh;
-	text-align: $wc-product-list-title-ta;
-	margin: $wc-product-list-title-offset;
-	text-transform: $wc-product-list-title-tt;
+	font-size: variables.$wc-product-list-title-fz;
+	line-height: variables.$wc-product-list-title-lh;
+	text-align: variables.$wc-product-list-title-ta;
+	margin: variables.$wc-product-list-title-offset;
+	text-transform: variables.$wc-product-list-title-tt;
 }
 
 // Single product tabs
 .panel h2 {
-	font-size: $wc-single-tabs-title-fz;
-	line-height: $wc-single-tabs-title-lh;
-	text-align: $wc-single-tabs-title-ta;
-	margin: $wc-single-tabs-title-offset;
-	text-transform: $wc-single-tabs-title-tt;
+	font-size: variables.$wc-single-tabs-title-fz;
+	line-height: variables.$wc-single-tabs-title-lh;
+	text-align: variables.$wc-single-tabs-title-ta;
+	margin: variables.$wc-single-tabs-title-offset;
+	text-transform: variables.$wc-single-tabs-title-tt;
 }
 
 // Single product raleted & upsels
 .related > h2,
 .upsells > h2 {
-	font-size: $wc-single-related-title-fz;
-	line-height: $wc-single-related-title-lh;
-	text-align: $wc-single-related-title-ta;
-	margin: $wc-single-related-title-offset;
-	text-transform: $wc-single-related-title-tt;
+	font-size: variables.$wc-single-related-title-fz;
+	line-height: variables.$wc-single-related-title-lh;
+	text-align: variables.$wc-single-related-title-ta;
+	margin: variables.$wc-single-related-title-offset;
+	text-transform: variables.$wc-single-related-title-tt;
 }
 
 /*     Shopping cart title       */
 .woocommerce-cart .entry-header > .entry-title {
-	font-size: $wc-shopping-cart-title-fz;
-	line-height: $wc-shopping-cart-title-lh;
-	text-align: $wc-shopping-cart-title-ta;
-	margin: $wc-shopping-cart-title-offset;
-	text-transform: $wc-shopping-cart-title-tt;
+	font-size: variables.$wc-shopping-cart-title-fz;
+	line-height: variables.$wc-shopping-cart-title-lh;
+	text-align: variables.$wc-shopping-cart-title-ta;
+	margin: variables.$wc-shopping-cart-title-offset;
+	text-transform: variables.$wc-shopping-cart-title-tt;
 }
 
 // Checkout cart
 .woocommerce-checkout .entry-header > .entry-title {
-	font-size: $wc-checkout-cart-title-fz;
-	line-height: $wc-checkout-cart-title-lh;
-	text-align: $wc-checkout-cart-title-ta;
-	margin: $wc-checkout-cart-title-offset;
-	text-transform: $wc-checkout-cart-title-tt;
+	font-size: variables.$wc-checkout-cart-title-fz;
+	line-height: variables.$wc-checkout-cart-title-lh;
+	text-align: variables.$wc-checkout-cart-title-ta;
+	margin: variables.$wc-checkout-cart-title-offset;
+	text-transform: variables.$wc-checkout-cart-title-tt;
 }
 // My account
 .woocommerce-account .entry-header > .entry-title {
-	font-size: $wc-my-account-title-fz;
-	line-height: $wc-my-account-title-lh;
-	text-align: $wc-my-account-title-ta;
+	font-size: variables.$wc-my-account-title-fz;
+	line-height: variables.$wc-my-account-title-lh;
+	text-align: variables.$wc-my-account-title-ta;
 	margin: 0 0 30px;
-	text-transform: $wc-my-account-title-tt;
+	text-transform: variables.$wc-my-account-title-tt;
 }
