--- a/inc/modules/woo/assets/scss/plugins/_jet-elements.scss
+++ b/inc/modules/woo/assets/scss/plugins/_jet-elements.scss
@@ -1,3 +1,5 @@
+@use "../../../../../../assets/sass/grid/breakpoints";
+
 /**
  * Jet elements widgets
  */
@@ -22,7 +24,7 @@
 		@for $i from 2 through 3 {
 			&.columns-#{$i} {
 				li.product{
-					@include media-breakpoint-down( md ){
+					@include breakpoints.media-breakpoint-down( md ){
 						flex: 0 0 50%;
 						max-width: 50%;
 					}
@@ -38,17 +40,17 @@
 		@for $i from 4 through 6 {
 			&.columns-#{$i} {
 				li.product{
-					@include media-breakpoint-down( lg ){
+					@include breakpoints.media-breakpoint-down( lg ){
 						flex: 0 0 25%;
 						max-width: 25%;
 					}
 					
-					@include media-breakpoint-down( md ){
+					@include breakpoints.media-breakpoint-down( md ){
 						flex: 0 0 33.3333%;
 						max-width: 33.3333%;
 					}
 					
-					@include media-breakpoint-down( sm ){
+					@include breakpoints.media-breakpoint-down( sm ){
 						flex: 0 0 50%;
 						max-width: 50%;
 					}
