--- a/inc/modules/woo/assets/scss/widgets/_rating-filter.scss
+++ b/inc/modules/woo/assets/scss/widgets/_rating-filter.scss
@@ -1,3 +1,5 @@
+@use "../mixins/variables";
+
 /**
  * Rating filter widget
  */
@@ -19,13 +21,13 @@
 				width: 16px;
 				height: 16px;
 				display: block;
-				border: 1px solid $wc-border-color;
+				border: 1px solid variables.$wc-border-color;
 				border-radius: 4px;
 			}
 			
 			&.chosen{
 				&:after{
-					content: $wc-list-widget-current-item-icon;
+					content: variables.$wc-list-widget-current-item-icon;
 					position: absolute;
 					display: block;
 					font-size: 10px;
@@ -37,7 +39,7 @@
 			}
 			
 			+ li{
-				margin-top: $wc-list-widget-space-between-items;
+				margin-top: variables.$wc-list-widget-space-between-items;
 			}
 			
 			.star-rating{
