--- a/inc/modules/woo/assets/scss/woo-module.scss
+++ b/inc/modules/woo/assets/scss/woo-module.scss
@@ -5,60 +5,60 @@ WooCommerce styles override
 */
 
 /*         Variables        */
-@import "mixins/variables";
-@import "../../../../../assets/sass/grid/variables";   //main theme variables
-@import "../../../../../assets/sass/grid/breakpoints";   //main theme breakpoints
-@import "../../../../../assets/sass/mixins/mixins-master";  //main theme mixins
-@import "mixins/mixins";
+@use "mixins/variables";
+@use "../../../../../assets/sass/grid/variables" as variables2;   //main theme variables
+@use "../../../../../assets/sass/grid/breakpoints";   //main theme breakpoints
+@use "../../../../../assets/sass/mixins/mixins-master";  //main theme mixins
+@use "mixins/mixins";
 
 /*        Components        */
-@import "components/badge";
-@import "components/button";
-@import "components/description";
-@import "components/archive-panel";
-@import "components/messages";
-@import "components/navigation";
-@import "components/price";
-@import "components/rating";
-@import "components/select";
-@import "components/tables";
-@import "components/meta";
-@import "components/title";
-@import "components/checkbox";
-@import "components/store-notice";
+@use "components/badge";
+@use "components/button";
+@use "components/description";
+@use "components/archive-panel";
+@use "components/messages";
+@use "components/navigation";
+@use "components/price";
+@use "components/rating";
+@use "components/select";
+@use "components/tables";
+@use "components/meta";
+@use "components/title";
+@use "components/checkbox";
+@use "components/store-notice";
 
 /*        Layouts        */
-@import "layouts/grid";
-@import "layouts/list";
+@use "layouts/grid";
+@use "layouts/list";
 
 /*        Pages        */
-@import "pages/cart";
-@import "pages/checkout";
-@import "pages/compare";
-@import "pages/my-account";
-@import "pages/order";
-@import "pages/wishlist";
+@use "pages/cart";
+@use "pages/checkout";
+@use "pages/compare";
+@use "pages/my-account";
+@use "pages/order";
+@use "pages/wishlist";
 
 /*        Product        */
-@import "product/product";
-@import "product/product-list";
-@import "product/product-grid";
+@use "product/product";
+@use "product/product-list";
+@use "product/product-grid";
 
 /*        Product        */
-@import "category/category";
-@import "category/category-list";
-@import "category/category-grid";
+@use "category/category";
+@use "category/category-list";
+@use "category/category-grid";
 
 /*       Single Product        */
-@import "single-product/add-to-cart";
-@import "single-product/reviews";
-@import "single-product/tabs";
-@import "single-product/thumbnails";
-@import "single-product/compare-wishlist";
+@use "single-product/add-to-cart";
+@use "single-product/reviews";
+@use "single-product/tabs";
+@use "single-product/thumbnails";
+@use "single-product/compare-wishlist";
 
 /*       Plugins        */
-@import "plugins/elementor";
-@import "plugins/jet-elements";
+@use "plugins/elementor";
+@use "plugins/jet-elements";
 
 /*       Widgets        */
-@import "widgets/widgets";
+@use "widgets/widgets";
